--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     compile "com.github.vok:vok-rest:$vaadinonkotlin_version"
 
     // testing
-    testCompile "com.github.vok.karibudsl:karibu-testing-v10:$karibudsl_version"
+    testCompile "com.github.kaributesting:karibu-testing-v10:0.4.0"
     testCompile("com.github.mvysny.dynatest:dynatest:0.6")
 
     // heroku app runner
