--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 // Original project: https://github.com/vaadin/beverage-starter-flow
 
 buildscript {
-    ext.karibudsl_version = '0.3.3'
+    ext.karibudsl_version = '0.3.4'
     ext.vaadinonkotlin_version = '0.4.0'
-    ext.vaadin10_version = '10.0.0.alpha21'
+    ext.vaadin10_version = '10.0.0.beta1'
 }
 
 plugins {
@@ -61,7 +61,7 @@ dependencies {
     compile "com.github.vok:vok-rest:$vaadinonkotlin_version"
 
     // testing
-    testCompile "com.github.kaributesting:karibu-testing-v10:0.4.0"
+    testCompile "com.github.kaributesting:karibu-testing-v10:0.4.1"
     testCompile("com.github.mvysny.dynatest:dynatest:0.6")
 
     // heroku app runner
