--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ dependencyManagement {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        // to see the exceptions of failed tests in Travis-CI console.
+        exceptionFormat 'full'
+    }
 }
 
 dependencies {
