--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 // Original project: https://github.com/vaadin/beverage-starter-flow
 
 buildscript {
-    ext.karibudsl_version = '0.4.5'
-    ext.vaadinonkotlin_version = '0.4.11'
-    ext.vaadin10_version = '10.0.0.rc5'
+    ext.karibudsl_version = '0.4.6'
+    ext.vaadinonkotlin_version = '0.4.12'
+    ext.vaadin10_version = '10.0.1'
 }
 
 plugins {
