--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,8 @@ apply plugin: 'war'
 defaultTasks 'clean', 'build'
 
 repositories {
-    mavenCentral()
-    jcenter()   // required for the new org.gretty:2.1.0
-    maven { url 'https://maven.vaadin.com/vaadin-addons' }
+    jcenter()
     maven { url "https://dl.bintray.com/mvysny/vaadin-on-kotlin" }
-    maven { url "https://dl.bintray.com/mvysny/github" }
 }
 
 gretty {
