--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,13 @@
 // Original project: https://github.com/vaadin/beverage-starter-flow
 
 buildscript {
-    ext.karibudsl_version = '0.4.10'
     ext.vaadinonkotlin_version = '0.5.0'
     ext.vaadin10_version = '11.0.1'
 }
 
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.2.71"
-    id "org.gretty" version "2.1.0"
+    id "org.gretty" version "2.2.0"  // https://github.com/gretty-gradle-plugin/gretty
     id "io.spring.dependency-management" version "1.0.6.RELEASE"  // remove when https://github.com/gradle/gradle/issues/4417 is fixed
 }
 
@@ -24,6 +23,7 @@ repositories {
 
 gretty {
     contextPath = ''
+    servletContainer = 'jetty9.4'
 }
 
 dependencyManagement {
@@ -39,8 +39,7 @@ test {
 }
 
 dependencies {
-    // Karibu-DSL dependency, includes Vaadin
-    compile("com.github.vok.karibudsl:karibu-dsl-v10:$karibudsl_version")
+    // Vaadin-on-Kotlin dependency, includes Vaadin
     compile "com.github.vaadinonkotlin:vok-framework-v10-sql2o:$vaadinonkotlin_version"
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
 
@@ -86,4 +85,3 @@ task copyToLib(type: Copy) {
     }
 }
 stage.dependsOn(copyToLib)
-
