--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ defaultTasks 'clean', 'build'
 
 repositories {
     jcenter()
+    maven { url "https://dl.bintray.com/mvysny/github" }
 }
 
 gretty {
@@ -58,7 +59,7 @@ dependencies {
 
     // testing
     testCompile "com.github.kaributesting:karibu-testing-v10:0.4.17"
-    testCompile("com.github.mvysny.dynatest:dynatest:0.9")
+    testCompile("com.github.mvysny.dynatest:dynatest-engine:0.11")
 
     // heroku app runner
     testRuntime 'com.github.jsimone:webapp-runner:9.0.11.0'
