--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,4 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+script: ./gradlew clean vaadinPrepareNode vaadinBuildFrontend build
