--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+    - $HOME/.vaadin
+    - $HOME/.pnpm-store
     - node_modules
-script: ./gradlew clean vaadinPrepareNode build -Pvaadin.productionMode
+script: ./gradlew clean build -Pvaadin.productionMode
