--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.4.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
+      "@vaadin/vaadin-grid": "5.7.12",
       "@vaadin/vaadin-icons": "4.3.2",
-      "@vaadin/vaadin-grid": "5.7.9",
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
-      "@vaadin/vaadin-core-shrinkwrap": "14.4.9",
+      "@vaadin/vaadin-core-shrinkwrap": "14.5.3",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -23,18 +23,19 @@
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
-      "@vaadin/vaadin-text-field": "2.8.3",
-      "@vaadin/vaadin-menu-bar": "1.2.1",
+      "@vaadin/vaadin-menu-bar": "1.2.2",
+      "@vaadin/vaadin-text-field": "2.8.4",
       "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
-      "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-accordion": "1.2.0",
+      "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-list-box": "1.4.0",
-      "@vaadin/vaadin-checkbox": "2.5.0",
       "@vaadin/vaadin-details": "1.2.0",
+      "@vaadin/vaadin-checkbox": "2.5.0",
       "@polymer/iron-icon": "3.0.1",
       "@vaadin/vaadin-time-picker": "2.4.0",
       "@vaadin/vaadin-context-menu": "4.5.0",
+      "@vaadin/vaadin-avatar": "1.0.4",
       "@vaadin/vaadin-tabs": "3.2.0",
       "@vaadin/vaadin-radio-button": "1.5.1",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
@@ -47,21 +48,23 @@
       "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
       "webpack": "4.42.0",
+      "ts-loader": "8.0.12",
       "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
+      "typescript": "4.0.3",
       "webpack-dev-server": "3.11.0"
     },
-    "hash": "96ee1119d41b71462beb881cd5fe9b90d0bdfb7eba185012a0ec365149a6edc1"
+    "hash": "1312b1de1ca744e1cc025ac8f6fdc908c3d004734357646b04676ee81883dd7d"
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
+    "lit-element": "2.4.0",
     "@polymer/polymer": "3.2.0",
     "@webcomponents/webcomponentsjs": "^2.2.10",
+    "@vaadin/vaadin-grid": "5.7.12",
     "@vaadin/vaadin-icons": "4.3.2",
-    "@vaadin/vaadin-grid": "5.7.9",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-combo-box": "5.4.7",
-    "@vaadin/vaadin-core-shrinkwrap": "14.4.9",
+    "@vaadin/vaadin-core-shrinkwrap": "14.5.3",
     "@vaadin/vaadin-upload": "4.4.1",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-select": "2.4.0",
@@ -74,18 +77,19 @@
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-button": "2.4.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.3",
-    "@vaadin/vaadin-menu-bar": "1.2.1",
+    "@vaadin/vaadin-menu-bar": "1.2.2",
+    "@vaadin/vaadin-text-field": "2.8.4",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-form-layout": "2.3.0",
-    "@polymer/iron-list": "3.1.0",
     "@vaadin/vaadin-accordion": "1.2.0",
+    "@polymer/iron-list": "3.1.0",
     "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
     "@vaadin/vaadin-details": "1.2.0",
+    "@vaadin/vaadin-checkbox": "2.5.0",
     "@polymer/iron-icon": "3.0.1",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
+    "@vaadin/vaadin-avatar": "1.0.4",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
@@ -98,8 +102,10 @@
     "raw-loader": "3.1.0",
     "webpack-cli": "3.3.11",
     "webpack": "4.42.0",
+    "ts-loader": "8.0.12",
     "chokidar": "^3.5.0",
     "webpack-merge": "4.2.2",
+    "typescript": "4.0.3",
     "webpack-dev-server": "3.11.0"
   }
 }
