--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,16 +9,15 @@ slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 vaadin-boot = "com.github.mvysny.vaadin-boot:vaadin-boot:12.3"
 vaadin-core = { module = "com.vaadin:vaadin-core", version.ref = "vaadin" }
-junit-platform-launcher = "org.junit.platform:junit-platform-launcher:1.10.2"
 karibu-testing = "com.github.mvysny.kaributesting:karibu-testing-v24:2.1.8"
 karibu-dsl = "com.github.mvysny.karibudsl:karibu-dsl-v23:2.1.3"
 flyway = "org.flywaydb:flyway-core:10.15.2"
 h2 = "com.h2database:h2:2.2.224"
 hikaricp = "com.zaxxer:HikariCP:5.1.0"
-dynatest = "com.github.mvysny.dynatest:dynatest:0.25"
 vok-db = { module = "eu.vaadinonkotlin:vok-framework-vokdb", version.ref = "vok" }
 vok-rest-server = { module = "eu.vaadinonkotlin:vok-rest", version.ref = "vok" }
 vok-rest-client = { module = "eu.vaadinonkotlin:vok-rest-client", version.ref = "vok" }
+junit = "org.junit.jupiter:junit-jupiter-engine:5.11.0"
 
 [plugins]
 vaadin = { id = "com.vaadin", version.ref = "vaadin" }
